updated bridge driver

--- a/samples/net/spe-bridge/prj.conf
+++ b/samples/net/spe-bridge/prj.conf
@@ -1,79 +1,50 @@
-# CONFIG_NETWORKING=y
-# CONFIG_NET_L2_ETHERNET=y
-# CONFIG_NET_IPV6=n
-# CONFIG_NET_IPV4=y
-# CONFIG_NET_ARP=y
-# CONFIG_NET_UDP=y
-# CONFIG_NET_DHCPV4=n
-# CONFIG_NET_DHCPV4_OPTION_CALLBACKS=n
-# CONFIG_DNS_RESOLVER=y   
-
-# CONFIG_TEST_RANDOM_GENERATOR=y
-
-# CONFIG_INIT_STACKS=y
-
-# CONFIG_NET_MGMT=y
-# CONFIG_NET_MGMT_EVENT=y
-
-# CONFIG_NET_LOG=y
-# CONFIG_LOG=y
-
-# CONFIG_SLIP_STATISTICS=n
-# CONFIG_NET_SHELL=y
-# CONFIG_UART_CONSOLE=y
-
-
-# # CONFIG_NET_CONFIG_SETTINGS=y
-# # CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.10"
-# # CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
-# # CONFIG_NET_CONFIG_MY_IPV4_GW="192.168.1.1"
-
-
 CONFIG_NETWORKING=y
-CONFIG_NET_L2_ETHERNET=y
-
-#CONFIG_NET_ROUTING=y
-#CONFIG_NET_FORWARD=y
-#CONFIG_NET_RAW_MODE=y
-#CONFIG_NET_ROUTE_MCAST=y
-CONFIG_NET_CONTEXT_NET_PKT_POOL=y
-CONFIG_NET_MGMT=y
-CONFIG_NET_MGMT_EVENT=y
-CONFIG_NET_MGMT_EVENT_INFO=y
-#CONFIG_NET_IF=y
-CONFIG_NET_STATISTICS=y
-CONFIG_NET_STATISTICS_USER_API=y
-
 CONFIG_NET_IPV6=n
 CONFIG_NET_IPV4=y
 #CONFIG_NET_ARP=y
-#CONFIG_NET_ICMPV4_ACCEPT_BROADCAST=y 
-CONFIG_NET_UDP=y
-CONFIG_NET_DHCPV4=y
-CONFIG_NET_DHCPV4_OPTION_CALLBACKS=y
-CONFIG_DNS_RESOLVER=y
-CONFIG_NET_DHCPV4_SERVER=y
-CONFIG_NET_STATISTICS=y
-CONFIG_TEST_RANDOM_GENERATOR=y
-CONFIG_NET_UDP=y
-CONFIG_NET_TCP=y
+#CONFIG_NET_UDP=y
+#CONFIG_NET_DHCPV4=y
+#CONFIG_NET_DHCPV4_OPTION_CALLBACKS=y
+#CONFIG_DNS_RESOLVER=y
+#CONFIG_NET_DHCPV4_SERVER=y
 
-CONFIG_UART_CONSOLE=y
+CONFIG_TEST_RANDOM_GENERATOR=y
 
 CONFIG_INIT_STACKS=y
+#CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_MAIN_STACK_SIZE=10240
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+CONFIG_ISR_STACK_SIZE=4048
 
 CONFIG_NET_MGMT=y
 CONFIG_NET_MGMT_EVENT=y
-
+CONFIG_NET_PKT_FILTER=y
 CONFIG_NET_LOG=y
+CONFIG_LOG=y
+CONFIG_NET_ETHERNET_BRIDGE=y
+CONFIG_NET_ETHERNET_BRIDGE_SHELL=y
+CONFIG_NET_ETHERNET_BRIDGE_TXRX_DEBUG=y
+CONFIG_ETH_NATIVE_POSIX_INTERFACE_COUNT=2
+CONFIG_NET_IF_MAX_IPV4_COUNT=3
 
 CONFIG_SLIP_STATISTICS=n
 CONFIG_NET_SHELL=y
-#CONFIG_NET_PKT_LOG_LEVEL_DBG=y
-
 
 CONFIG_USB_DEVICE_STACK=y
 CONFIG_USB_DEVICE_NETWORK_RNDIS=y
 CONFIG_USB_DEVICE_PRODUCT="Pico-SPE-USB-Ethernet"
 CONFIG_USB_DEVICE_VID=2FE3
 CONFIG_USB_DEVICE_PID=100
+#debug purpose
+#CONFIG_INIT_STACKS=y
+#CONFIG_STACK_SENTINEL=y
+#CONFIG_DEBUG=y
+#CONFIG_PRINTK=y
+#CONFIG_THREAD_STACK_INFO=y
+#CONFIG_THREAD_MONITOR=y
+#CONFIG_LOG_MODE_IMMEDIATE=y
+#CONFIG_NET_ETHERNET_BRIDGE_TXRX_DEBUG=y
+
+
+#CONFIG_STACK_USAGE=y
+#CONFIG_THREAD_STACK_INFO=y
