added DHCP capability

--- a/samples/net/spe-bridge-1/prj.conf
+++ b/samples/net/spe-bridge-1/prj.conf
@@ -1,11 +1,11 @@
 CONFIG_NETWORKING=y
 CONFIG_NET_IPV6=n
 CONFIG_NET_IPV4=y
-#CONFIG_NET_ARP=y
-#CONFIG_NET_UDP=y
-#CONFIG_NET_DHCPV4=y
-#CONFIG_NET_DHCPV4_OPTION_CALLBACKS=y
-#CONFIG_DNS_RESOLVER=y
+CONFIG_NET_ARP=y
+CONFIG_NET_UDP=y
+CONFIG_NET_DHCPV4=y
+CONFIG_NET_DHCPV4_OPTION_CALLBACKS=y
+CONFIG_DNS_RESOLVER=y
 #CONFIG_NET_DHCPV4_SERVER=y
 
 CONFIG_TEST_RANDOM_GENERATOR=y
@@ -35,6 +35,7 @@ CONFIG_USB_DEVICE_NETWORK_RNDIS=y
 CONFIG_USB_DEVICE_PRODUCT="Pico-SPE-USB-Ethernet"
 CONFIG_USB_DEVICE_VID=2FE3
 CONFIG_USB_DEVICE_PID=100
+
 #debug purpose
 #CONFIG_INIT_STACKS=y
 #CONFIG_STACK_SENTINEL=y
