--- a/samples/net/spe-dhcp-server-device-1/prj.conf
+++ b/samples/net/spe-dhcp-server-device-1/prj.conf
@@ -4,10 +4,10 @@ CONFIG_NET_IPV6=y
 CONFIG_NET_IPV4=y
 CONFIG_NET_ARP=y
 CONFIG_NET_UDP=y
-CONFIG_NET_DHCPV4=n
-CONFIG_NET_DHCPV4_OPTION_CALLBACKS=n
+CONFIG_NET_DHCPV4=y
+CONFIG_NET_DHCPV4_OPTION_CALLBACKS=y
 CONFIG_DNS_RESOLVER=y
-
+CONFIG_NET_DHCPV4_SERVER=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 
 CONFIG_INIT_STACKS=y
@@ -23,9 +23,9 @@ CONFIG_NET_SHELL=y
 CONFIG_UART_CONSOLE=y
 CONFIG_NET_ROUTE_MCAST=y       # Enable multicast routing (optional)
 
-CONFIG_NET_CONFIG_SETTINGS=y
-CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.178.1.4"
-CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
-CONFIG_NET_CONFIG_MY_IPV4_GW="192.178.1.1"
+# CONFIG_NET_CONFIG_SETTINGS=y
+# CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.178.1.4"
+# CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
+# CONFIG_NET_CONFIG_MY_IPV4_GW="192.178.1.1"
 
 
